--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -35,6 +35,7 @@
     padding: 10px;
     border-top: 1px solid lightgray;
     margin-top: 20px;
+    background: white;
     input {
       border: none;
       flex: 1;
